# utils

./: .gitignore  README.md  __init__.py  _matplotlib.py  _polars.py  _terminal.py  _tqdm_rich.py  cli.py  mise.toml  mpl.py  pl.py  prek.toml  pyproject.toml  ruff_rules.py  terminal.py  tqdm_rich.py
tests/: _test_cli.py  _test_mpl.py  _test_pl.py  _test_ruff_rules.py  pytest.ini  test_cli.py  test_matplotlib.py  test_pl.py  test_polars.py  test_ruff.py
