[project]
name = "utils"
version = "0.1.0"
description = "Personal python utils"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["mypy>=1.14.1", "pyright>=1.1.394", "pytest>=8.3.4", "pytest-cov>=6.0.0", "ruff>=0.12.0"]
terminal = ["loguru>=0.7.3", "rich>=13.9.4", "tqdm>=4.67.1"]
mpl = ["cmap>=0.5.0", "matplotlib>=3.10.0", "pyside6>=6.9.0", "seaborn>=0.13.2"]
cli = ["cyclopts>=3.3.1"]
polars = ["polars>=1.20.0", "pyarrow>=20.0.0", "whenever>=0.7.3", "xlsxwriter>=3.2.1"]

[tool.uv]
default-groups = "all"

[tool.ruff]
preview = true
output-format = "concise"

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM", # flake8-commas
    "CPY", # flake8-copyright
    "D",   # pydocstyle
    "Q",   # flake8-quotes
    "S",   # flake8-bandit
]
extend-safe-fixes = [
    "EM", # flake8-errmsg
    "TC", # flake8-type-checking
]
future-annotations = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "PLC2701", "PLR2004"]

[tool.mypy]
disable_error_code = ["import", "import-untyped"]

[tool.pytest.ini_options]
addopts = ["-v", "--doctest-modules", "--cov=.", "--cov-report", "html"]
python_files = "_test*.py"

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "if (typing\\.)?TYPE_CHECKING:",
    "raise AssertionError",
]
